Fix link color on light screen for better accessibility. Comment out not really used text alignment for articles

--- a/assets/css/_main.scss
+++ b/assets/css/_main.scss
@@ -9,7 +9,7 @@
     --warning-color: rgb(255, 238, 170);
     --notice-color: rgb(170, 204, 255);
     --donate-color: rgb(170, 255, 171);
-    --link-color: rgb(239, 52, 52);
+    --link-color: rgb(212 47 47);;
     
     --sans: sans-serif;
     --mono: monospace;
@@ -75,9 +75,10 @@ article {
     padding: 1em 0;
 }
 
-article p {
+/* article p {
     text-align: justify;
 }
+*/
 
 /* =============================================================================
     Format Nav
